--- a/html/image.html
+++ b/html/image.html
@@ -11,15 +11,15 @@
             // img.onclick = function() {
             //     alert('click');
             // }
-            // img.onmouseenter = function() {
+            // img.onmouseenter = function() { hover
             //     alert('mouse enter');
             // }
 
-            // img.onmousedown = function() {
+            // img.onmousedown = function() { click
             //     alert('mouse down');
             // }
 
-            // img.onmouseleave = function() {
+            // img.onmouseleave = function() { mouseout
             //     alert('mouse leave');
             // }
 
